# Internship_task

./: CMakeLists.txt  data
Client/: CMakeLists.txt  client  main.cpp
Client/headers/: Client.hpp
Client/src/: Client.cpp
DB/: CMakeLists.txt  main.cpp
DB/headers/: DB.hpp  HTTP.hpp  IDB.hpp
DB/src/: DB.cpp  HTTP.cpp
Server/: CMakeLists.txt  main.cpp  server
Server/headers/: Server.hpp
Server/src/: Server.cpp
TCP/headers/: TCP.hpp
